2008-04-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_backspace): 
	fix: just go back, don't clear the character
	(avt_ask): adapted

	* avatarsay.c (init_language_info): handle long language names 
	case-insensitive

	* avtfilechooser.c (MARK, PARENT_DIRECTORY, RESTART, CONTINUE)
	(LONGER, DIRECTORY): new macros
	(get_file): mark longer entries

	* avtfilechooser.c (get_file):
	use avt_auto_margin, remove show_name
	mark directory entries

	* akfavatar.h, avatar.c (avt_auto_margin):
	new function
	(avt_forward, avt_initialize): use/set new variable auto_margin

	* avatarsay.c (check_config_file):
	keyword BACKGROUNDCOLOR
	make keywords case insensitive

2008-03-29  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.15.0 released

	* akfavatar.h (AVT_DEPRECATED, AVT_UNUSED):
	new makro used to mark deprecated or unused stuff (gcc only)

	* avatarsay.c (get_user_home):
	new function
	(run_shell): chdir to home directory before starting the shell

	* avatarsay.c (get_user_shell):
	first search for the environment variable SHELL

	* avtfilechooser.c:
	new file
	avatarsay.c (ask_file): use avtfilechooser

	* avatar.c (avt_initialize):
	balloon height must be at least 10 lines

	* akfavatar.h, avatar.c (avt_button_quit):
	new function

	* akfavatar.h (AKFAVATAR):
	new macro

	* akfavatar.h, avatar.c (avt_normal_text):
	new function

	* akfavatar.h, avatar.c (avt_inverse, avt_get_inverse):
	new functions

	* akfavatar.h, avatar.c (avt_save_position, avt_restore_position):
	new functions

	* akfavatar.h, avatar.c (avt_move_xy):
	new function

	* akfavatar.h, avatar.c (avt_reserve_single_keys):
	new function
	(avt_stop_on_esc): removed

	* avatarsay.c:
	support options -b, --nocolor
	remove options -s, --saypipe

	* avatarsay.c (check_encoding, getwline):
	don't remove byte order marks, but ignore them while reading

	* avatarsay.c (process_file):
	skip lines "@echo off" through "exit" (for Windows/ReactOS)
