@@ -18,7 +18,7 @@
  * along with this program; if not, see <http://www.gnu.org/licenses/>.
  */
 
-/* $Id: avatarsay.c,v 2.137 2008-04-09 09:10:10 akf Exp $ */
+/* $Id: avatarsay.c,v 2.138 2008-05-17 16:28:21 akf Exp $ */
 
 #ifndef _GNU_SOURCE
 #  define _GNU_SOURCE
@@ -2008,6 +2008,7 @@ escape_sequence (int fd, wchar_t last_character)
       text_color = saved_text_color = 0;
       text_background_color = saved_text_background_color = 0xF;
       ansi_graphic_code (0);
+      avt_text_delay (0);
       insert_mode = AVT_FALSE;
       avt_clear ();
       avt_save_position ();
@@ -2251,6 +2252,10 @@ escape_sequence (int fd, wchar_t last_character)
 	    case 25:
 	      avt_activate_cursor (AVT_TRUE);
 	      break;
+	    case 56:		/* AKFAvatar extension */
+	      /* text delay, slow-print */
+	      avt_set_text_delay (AVT_DEFAULT_TEXT_DELAY);
+	      break;
 	    }
 	}
       else
@@ -2289,6 +2294,10 @@ escape_sequence (int fd, wchar_t last_character)
 	      break;
 	    case 25:
 	      avt_activate_cursor (AVT_FALSE);
+	      break;
+	    case 56:		/* AKFAvatar extension */
+	      /* no text delay */
+	      avt_set_text_delay (0);
 	      break;
 	    }
 	}
@@ -3243,7 +3252,7 @@ main (int argc, char *argv[])
   quit (EXIT_SUCCESS);
 
   /* never executed, but kept in the code */
-  puts ("$Id: avatarsay.c,v 2.137 2008-04-09 09:10:10 akf Exp $");
+  puts ("$Id: avatarsay.c,v 2.138 2008-05-17 16:28:21 akf Exp $");
 
   return EXIT_SUCCESS;
 }
