@@ -1,3 +1,8 @@
+2008-05-17  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatarsay.c (escape_sequence):
+	Extension: CSI ? 56 h  - switch slow-print on (l for off)
+
 2008-04-14  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar.c (avt_backspace): 
